# FaceEngine

./: .gitignore  CMakeLists.txt  README.md  testNCNN.cpp
data/models/: chin-sim-opt.id.h  chin-sim-opt.mem.h  chin_sim_opt.id.h  chin_sim_opt.mem.h  eye_exist.id.h  eye_exist.mem.h  eye_sim_opt.id.h  eye_sim_opt.mem.h  eyebrow-sim-opt.id.h  eyebrow-sim-opt.mem.h  eyebrow_sim_opt.id.h  eyebrow_sim_opt.mem.h  face_detect.id.h  fas-sim-opt.id.h  fas-sim-opt.mem.h  fas_sim.id.h  fas_sim.mem.h  fas_sim_opt.id.h  fas_sim_opt.mem.h  fas_structure-sim-opt.id.h  fas_structure-sim-opt.mem.h  forehead_sim_opt.id.h  forehead_sim_opt.mem.h  landmarks_ljw.id.h  model1.id.h  model2.id.h  mouth_exist.id.h  mouth_exist.mem.h  mouth_sim_opt.id.h  mouth_sim_opt.mem.h  nose_exist.id.h  nose_exist.mem.h  nose_sim_opt.id.h  nose_sim_opt.mem.h  occ-sim-opt.id.h  occ-sim-opt.mem.h  occ_sim_opt.id.h  occ_sim_opt.mem.h
examples/: test3D.cpp  testCamera.cpp  testNCNN.cpp  testNose.cpp  test_picture.cc
inc/: chin_exist.h  detectcontext.h  detectstrategy.h  eye_exist.h  eyebrow_exist.h  face_alignment.h  facealign.h  facerecg_interface.h  fas.h  fas_structure.h  forehead_exist.h  mouth_exist.h  ncnn_feature_extractor.h  ncnnssd.h  nose_exist.h  occ.h  occ_exist.h  rgbalive.h  tool.h  utils.h
src/: chin_exist.cpp  eye_exist.cpp  eyebrow_exist.cpp  face_alignment.cpp  facealign.cpp  facerecg_interface.cpp  fas.cpp  fas_structure.cpp  forehead_exist.cpp  mouth_exist.cpp  ncnn_feature_extractor.cpp  ncnnssd.cpp  nose_exist.cpp  occ.cpp  occ_exist.cpp  rgbalive.cpp  tool.cpp
